# gnn-bench

./: .gitignore  README.md  pyproject.toml  results.md  setup.sh
config/: default.yaml  gat_ogbn_arxiv.yaml  gat_ogbn_arxiv_gpu.yaml  gat_ogbn_products.yaml  smoke.yaml
notebooks/: results.ipynb
src/gnn_bench/: __init__.py  cli.py  db_logger.py  ddp_utils.py  plot.py  slurm_report.py  train.py  train_back.py
